--- a/matricula.html
+++ b/matricula.html
@@ -33,6 +33,63 @@
                 padding: 2rem 1rem;
             }
 
+                        header {
+                background: var(--bg-white);
+                box-shadow: 0 2px 10px var(--shadow);
+                position: sticky;
+                top: 0;
+                z-index: 1000;
+            }
+
+            nav {
+                max-width: 1400px;
+                margin: 0 auto;
+                padding: 1.2rem 2rem;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+
+            .logo {
+                display: flex;
+                align-items: center;
+                gap: 0.8rem;
+                font-size: 1.8rem;
+                font-weight: 700;
+                color: var(--primary);
+            }
+
+            .logo-icon {
+                width: 45px;
+                height: 45px;
+                background: linear-gradient(135deg, var(--primary), var(--primary-light));
+                border-radius: 10px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: white;
+                font-size: 1.5rem;
+            }
+
+            nav ul {
+                display: flex;
+                list-style: none;
+                gap: 2.5rem;
+                align-items: center;
+            }
+
+            nav a {
+                text-decoration: none;
+                color: var(--text-dark);
+                font-weight: 500;
+                transition: color 0.3s;
+            }
+
+            nav a:hover {
+                color: var(--primary);
+            }
+
+
             .container {
                 max-width: 1400px;
                 margin: 0 auto;
@@ -742,6 +799,20 @@
         </style>
     </head>
     <body>
+        <header>
+            <nav>
+                <div class="logo">
+                    <div class="logo-icon">🏠</div>
+                    <span>SABERWASI</span>
+                </div>
+                <ul>
+                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#programa">Programa</a></li>
+                    <li><a href="#nosotros">Sobre Nosotros</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
         <div class="container">
             <div class="form-header">
                 <a href="#" class="recover-link">
