--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                     <span>SABERWASI</span>
                 </div>
                 <ul>
-                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="#programa">Programa</a></li>
                     <li><a href="#nosotros">Sobre Nosotros</a></li>
                     <li><a href="#contacto">Contacto</a></li>
