--- a/matricula.html
+++ b/matricula.html
@@ -31,14 +31,16 @@
                 color: var(--text-dark);
                 line-height: 1.6;
                 padding: 2rem 1rem;
+                padding-top: 0 !important;
             }
 
-                        header {
+            header {
                 background: var(--bg-white);
                 box-shadow: 0 2px 10px var(--shadow);
                 position: sticky;
                 top: 0;
                 z-index: 1000;
+                padding-top: 1rem;
             }
 
             nav {
@@ -806,7 +808,7 @@
                     <span>SABERWASI</span>
                 </div>
                 <ul>
-                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="#programa">Programa</a></li>
                     <li><a href="#nosotros">Sobre Nosotros</a></li>
                     <li><a href="#contacto">Contacto</a></li>
