--- a/matricula.html
+++ b/matricula.html
@@ -1747,7 +1747,7 @@
                             </div>
                         </div>
                     </div>
-
+                </div>
 
                 <!-- Navigation Buttons -->
                 <div class="navigation-buttons">
@@ -1855,7 +1855,7 @@
 
             function submitForm() {
                 // Mostrar mensaje de confirmación
-                alert('✅ ¡Inscripción realizada con éxito!\n\nSus datos han sido registrados correctamente.\n\nAhora pasaremos al proceso de Atención donde coordinará la visita a la institución, entrevista y evaluación.\n\nGracias por confiar en SABERWASI.');
+                alert('✅ Inscripción Realizada\n\nSus datos han sido registrados correctamente.\n\nAhora pasaremos al proceso de Atención donde coordinará:\n• Visita a la institución\n• Entrevista con los padres\n• Clase de prueba\n• Evaluación psicológica\n\nGracias por confiar en SABERWASI.');
 
                 // Avanzar automáticamente al siguiente paso (Atención)
                 currentStep = 3; // Paso 3 es Atención
