--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
                 <p>En SABERWASI, su hijo crece con seguridad, confianza y propósito. Forjamos su carácter, fortalecemos su autoestima y despertamos su amor por el aprendizaje, guiados por valores auténticos y un compromiso educativo firme.</p>
                 <div class="cta-buttons">
                     <a href="matricula.html" class="btn btn-primary">Matricular Ahora</a>
-                    <a href="#programa" class="btn btn-secondary">Conocer Programa</a>
+                    <a href="programa.html" class="btn btn-secondary">Conocer Programa</a>
                 </div>
             </div>
             <div class="hero-image">
